# acc-lms

./: .editorconfig  .env.example  .gitignore  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml
_assets/: README.md
be/: .gitignore  Cargo.toml  Dockerfile  README.md
be/ai-service/: Cargo.toml
be/ai-service/src/: lib.rs  main.rs
be/ai-service/src/api/: dto.rs  handlers.rs  mod.rs
be/ai-service/src/domain/: entities.rs  errors.rs  mod.rs
be/ai-service/src/llm/: mod.rs  openai_client.rs
be/ai-service/src/repository/: conversation_repository.rs  embedding_repository.rs  mod.rs  quiz_generation_repository.rs  summary_repository.rs
be/ai-service/src/service/: mod.rs  quiz_generator_service.rs  semantic_search_service.rs  summary_service.rs  tutor_service.rs
be/analytics-service/: Cargo.toml
be/analytics-service/src/: main.rs
be/analytics-service/src/api/: dto.rs  handlers.rs  mod.rs  routes.rs
be/analytics-service/src/domain/: entities.rs  events.rs  mod.rs  value_objects.rs
be/analytics-service/src/repository/: analytics_repository.rs  mod.rs
be/analytics-service/src/service/: analytics_service.rs  mod.rs
be/assessments-service/: Cargo.toml
be/assessments-service/src/: main.rs
be/assessments-service/src/api/: dto.rs  handlers.rs  mod.rs  routes.rs
be/assessments-service/src/domain/: entities.rs  events.rs  mod.rs  value_objects.rs
be/assessments-service/src/repository/: assessment_repository.rs  mod.rs
be/assessments-service/src/service/: assessment_service.rs  mod.rs
be/auth-service/: Cargo.toml
be/auth-service/src/: main.rs
be/auth-service/src/api/: dto.rs  handlers.rs  mod.rs  routes.rs
be/auth-service/src/domain/: entities.rs  events.rs  mod.rs
be/auth-service/src/repository/: mod.rs  user_repository.rs
be/auth-service/src/service/: auth_service.rs  mod.rs
be/certificates-service/: Cargo.toml
be/certificates-service/src/: lib.rs  main.rs
be/certificates-service/src/api/: dto.rs  handlers.rs  mod.rs
be/certificates-service/src/domain/: entities.rs  errors.rs  mod.rs
be/certificates-service/src/repository/: certificates.rs  mod.rs
be/certificates-service/src/services/: certificates.rs  mod.rs
be/chatbot-service/: Cargo.toml
be/chatbot-service/src/: main.rs
be/chatbot-service/src/api/: dto.rs  handlers.rs  mod.rs  routes.rs
be/chatbot-service/src/domain/: entities.rs  mod.rs
be/chatbot-service/src/repository/: chatbot_repository.rs  mod.rs
be/chatbot-service/src/service/: chatbot_service.rs  mod.rs
be/compliance-service/: Cargo.toml
be/compliance-service/src/: lib.rs  main.rs
be/compliance-service/src/api/: dto.rs  handlers.rs  mod.rs  routes.rs
be/compliance-service/src/domain/: entities.rs
be/compliance-service/src/repository/: compliance_repository.rs  mod.rs
be/compliance-service/src/service/: compliance_service.rs  mod.rs
be/content-service/: Cargo.toml
be/content-service/src/: main.rs
be/content-service/src/api/: dto.rs  handlers.rs  mod.rs  routes.rs
be/content-service/src/domain/: entities.rs
be/content-service/src/repository/: content_repository.rs  mod.rs
be/content-service/src/service/: content_service.rs  mod.rs
be/content-service/src/storage/: backend.rs  local.rs  mod.rs
be/courses-service/: Cargo.toml
be/courses-service/src/: main.rs
be/courses-service/src/api/: dto.rs  handlers.rs  mod.rs  routes.rs
be/courses-service/src/domain/: entities.rs  events.rs  mod.rs  value_objects.rs
be/courses-service/src/repository/: course_repository.rs  mod.rs
be/courses-service/src/service/: course_service.rs  mod.rs
be/enrollments-service/: Cargo.toml
be/enrollments-service/src/: main.rs
be/enrollments-service/src/api/: dto.rs  handlers.rs  mod.rs  routes.rs
be/enrollments-service/src/domain/: entities.rs  events.rs  mod.rs  value_objects.rs
be/enrollments-service/src/repository/: enrollment_repository.rs  mod.rs
be/enrollments-service/src/service/: enrollment_service.rs  mod.rs
be/grades-service/: Cargo.toml
be/grades-service/src/: lib.rs  main.rs
be/grades-service/src/api/: dto.rs  handlers.rs  mod.rs
be/grades-service/src/domain/: entities.rs  errors.rs  mod.rs
be/grades-service/src/repository/: grade_repository.rs  mod.rs  stats_repository.rs  transcript_repository.rs
be/grades-service/src/service/: export_service.rs  grade_service.rs  mod.rs  stats_service.rs  transcript_service.rs
be/kb-service/: Cargo.toml
be/kb-service/src/: lib.rs  main.rs
be/kb-service/src/api/: dto.rs  handlers.rs  mod.rs  routes.rs
be/kb-service/src/domain/: entities.rs  mod.rs
be/kb-service/src/repository/: kb_repository.rs  mod.rs
be/kb-service/src/service/: kb_service.rs  mod.rs
be/messaging-service/: Cargo.toml
be/messaging-service/src/: lib.rs  main.rs
be/messaging-service/src/api/: dto.rs  handlers.rs  mod.rs
be/messaging-service/src/domain/: entities.rs  errors.rs  mod.rs
be/messaging-service/src/repository/: messaging.rs  mod.rs
be/messaging-service/src/services/: messaging.rs  mod.rs
be/notifications-service/: Cargo.toml
be/notifications-service/src/: main.rs
be/notifications-service/src/api/: dto.rs  handlers.rs  mod.rs  routes.rs
be/notifications-service/src/domain/: entities.rs  events.rs  mod.rs  value_objects.rs
be/notifications-service/src/repository/: mod.rs  notification_repository.rs
be/notifications-service/src/service/: mod.rs  notification_service.rs
be/payments-service/: Cargo.toml
be/payments-service/src/: main.rs
be/payments-service/src/api/: dto.rs  handlers.rs  mod.rs  routes.rs
be/reviews-service/: Cargo.toml
be/reviews-service/src/: lib.rs  main.rs
be/search-service/: Cargo.toml
be/search-service/src/: lib.rs  main.rs
be/shared/: Cargo.toml
be/shared/src/: config.rs  database.rs  errors.rs  lib.rs  redis_client.rs  tracing_config.rs  validation.rs
be/subscription-service/: Cargo.toml
be/subscription-service/src/: lib.rs  main.rs
be/users-service/: Cargo.toml
be/users-service/src/: main.rs
be/wishlist-service/: Cargo.toml
be/wishlist-service/src/: lib.rs  main.rs
(+252 files in other folders)
