# =============================================================================
# ACC LMS - AI Service
# =============================================================================
# Servicio de IA educativa: tutor contextual, búsqueda semántica,
# generación de quizzes, resúmenes y transcripciones
# Puerto: 8093
# =============================================================================

[package]
name = "ai-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AI-powered educational features for ACC LMS - tutoring, semantic search, content generation"

[[bin]]
name = "ai"
path = "src/main.rs"

[dependencies]
# Internal
shared = { path = "../shared" }

# Web framework
actix-web.workspace = true
actix-rt.workspace = true
actix-cors.workspace = true

# Streaming for SSE
actix-web-lab = "0.22"
futures-util = "0.3"
tokio-stream = "0.1"

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Vector similarity (pgvector)
pgvector = { version = "0.4", features = ["sqlx"] }

# Validation
validator.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true

# Types
uuid.workspace = true
chrono.workspace = true

# HTTP client (for LLM APIs)
reqwest.workspace = true

# AI clients
async-openai = "0.25"

# Redis for caching and rate limiting
redis.workspace = true

[dev-dependencies]
mockall.workspace = true
fake.workspace = true
wiremock.workspace = true
