[package]
name = "assessments-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "assessments"
path = "src/main.rs"

[dependencies]
# Internal crate
shared = { path = "../shared" }

# Web framework
actix-web.workspace = true
actix-rt.workspace = true
actix-cors.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Validation
validator.workspace = true

# UUID
uuid.workspace = true

# Date/Time
chrono.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true
