[package]
name = "auth-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "auth"
path = "src/main.rs"

[dependencies]
# Internal crates
shared = { path = "../shared" }

# Web framework
actix-web.workspace = true
actix-rt.workspace = true
actix-cors.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Validation
validator.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Tracing / Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true

# Types
uuid.workspace = true
chrono.workspace = true

# Crypto (for token hashing)
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
mockall.workspace = true
fake.workspace = true
actix-web = { workspace = true, features = ["macros"] }
