[package]
name = "certificates-service"
version = "0.1.0"
edition = "2021"
description = "Certificate generation and verification service for ACC-LMS (RF-STU-021)"
authors = ["ACC-LMS Team"]

[dependencies]
# Shared library
shared = { path = "../shared" }

# Web framework
actix-web = "4"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# Cache
redis = { version = "0.27", features = ["tokio-comp"] }

# PDF generation
printpdf = "0.7"

# Fonts
rusttype = "0.9"

# UUID and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# QR code for verification
qrcode = "0.14"

# Base64 encoding
base64 = "0.22"

# Error handling
thiserror = "2"
anyhow = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Configuration
config = "0.14"
dotenvy = "0.15"
