[package]
name = "content-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "content"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
actix-web.workspace = true
actix-cors.workspace = true
actix-files = "0.6"
actix-multipart = "0.7"
tokio.workspace = true
tokio-util = { version = "0.7", features = ["io"] }
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
thiserror.workspace = true
validator.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
async-trait = "0.1"
mime_guess = "2.0"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"
bytes = "1.9"
tempfile = "3.14"
