[package]
name = "courses-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "courses"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
axum.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
