[package]
name = "courses-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "courses"
path = "src/main.rs"

[dependencies]
# Internal crate
shared = { path = "../shared" }

# Web framework (Actix-web for consistency with auth/users)
actix-web.workspace = true
actix-rt.workspace = true
actix-cors.workspace = true

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Validation
validator.workspace = true

# UUID
uuid.workspace = true

# Date/Time
chrono.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-actix-web.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Slug generation
slug = "0.1"

[dev-dependencies]
mockall.workspace = true
fake.workspace = true
actix-web = { workspace = true, features = ["macros"] }
