[package]
name = "grades-service"
version = "0.1.0"
edition = "2021"
authors = ["ACC-LMS Team"]
description = "Grades aggregation, transcripts, and academic history service"

[[bin]]
name = "grades"
path = "src/main.rs"

[dependencies]
# Shared library
shared = { path = "../shared" }

# Web framework
actix-web = "4.12"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Unique identifiers
uuid = { version = "1.19", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Configuration
config = "0.14"

# Export formats
csv = "1.4"

# Decimal for precise calculations
rust_decimal = { version = "1.36", features = ["serde", "serde-float"] }

# Redis for caching
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# JWT for auth
jsonwebtoken = "9.3"
