[package]
name = "notifications-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "notifications"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
actix-web.workspace = true
actix-cors.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
validator.workspace = true
