[package]
name = "payments-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "payments"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = { workspace = true }
actix-cors = { workspace = true }

# Database
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "rust_decimal"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Validation
validator = { workspace = true, features = ["derive"] }

# Async runtime
tokio = { workspace = true }

# Utils
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }
