[package]
name = "search-service"
version = "0.1.0"
edition = "2021"
authors = ["ACC-LMS Team"]
description = "Full-text and semantic search service for courses and content"

[[bin]]
name = "search"
path = "src/main.rs"

[dependencies]
# Shared library
shared = { path = "../shared" }

# Web framework
actix-web = "4.12"
actix-cors = "0.7"

# Async runtime
tokio = { version = "1.48", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }

# Vector similarity (pgvector)
pgvector = { version = "0.4", features = ["sqlx"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Unique identifiers
uuid = { version = "1.19", features = ["v4", "serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Configuration
config = "0.14"

# Redis for caching
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# HTTP client for AI embeddings
reqwest = { version = "0.12", features = ["json"] }

# OpenAI for embeddings
async-openai = "0.25"

# Decimal for scoring
rust_decimal = { version = "1.36", features = ["serde", "serde-float"] }

# JWT for auth
jsonwebtoken = "9.3"

# Text processing
unicode-segmentation = "1.11"
