[package]
name = "shared"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Web
actix-web.workspace = true
axum.workspace = true
tower-http.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Auth
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true

# Validation
validator.workspace = true

# Errors
thiserror.workspace = true
anyhow.workspace = true

# Tracing
tracing.workspace = true
tracing-subscriber.workspace = true

# Types
uuid.workspace = true
chrono.workspace = true

# Config
config.workspace = true
dotenvy.workspace = true

# Redis
redis.workspace = true
