[package]
name = "users-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "users"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
actix-web.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true
